--- a/client/client/package.json
+++ b/client/client/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
+    "ng-mat-search-bar": "^3.0.1",
+    "npm": "^6.5.0",
     "router": "^1.3.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
