--- a/client/client/package.json
+++ b/client/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "angular-webstorage-service": "^1.0.2",
     "core-js": "^2.5.4",
     "ng-mat-search-bar": "^3.0.1",
     "npm": "^6.5.0",
@@ -31,7 +32,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "^7.1.3",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
