--- a/client/client/package.json
+++ b/client/client/package.json
@@ -27,7 +27,8 @@
     "ng-mat-search-bar": "^3.0.1",
     "npm": "^6.5.0",
     "router": "^1.3.3",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
